Bug #8534 Several errors 'cannot convert from 'char *' to 'unsigned char *'' on windows
Submitted: 16 Feb 2005 6:38 Modified: 16 Feb 2005 6:59
Reporter: Alexey Botchkov Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Server: Compiling Severity:S3 (Non-critical)
Version:5.0 OS:Windows (Windows)
Assigned to: Alexey Botchkov CPU Architecture:Any

[16 Feb 2005 6:38] Alexey Botchkov
Description:
ql\field.cpp(1587)       : 'my_decimal2binary'  : cannot convert parameter 3 from 'char *' to 'unsigned char *'
sql\field.cpp(1592)       : 'my_decimal2binary'  : cannot convert parameter 3 from 'char *' to 'unsigned char *'
sql\field.cpp(1593)       : 'print_decimal_buff' : cannot convert parameter 2 from 'char *' to 'const unsigned char *'
sql\field.cpp(1596)       : 'print_decimal_buff' : cannot convert parameter 2 from 'char *' to 'const unsigned char *'
sql\field.cpp(1719)       : 'binary2my_decimal'  : cannot convert parameter 2 from 'char *' to 'const unsigned char *'
sql\field.cpp(1720)       : 'print_decimal_buff' : cannot convert parameter 2 from 'char *' to 'const unsigned char *'
sql\item.cpp(1180)        : 'binary2my_decimal'  : cannot convert parameter 2 from 'const char *' to 'const unsigned char *'
sql\item_sum.cpp(1097)    : 'my_decimal2binary'  : cannot convert parameter 3 from 'char *' to 'unsigned char *'
sql\item_sum.cpp(1099)    : 'my_decimal2binary'  : cannot convert parameter 3 from 'char *' to 'unsigned char *'
sql\item_sum.cpp(1107)    : 'my_decimal2binary'  : cannot convert parameter 3 from 'char *' to 'unsigned char *'
sql\item_sum.cpp(1110)    : 'my_decimal2binary'  : cannot convert parameter 3 from 'char *' to 'unsigned char *'
sql\item_sum.cpp(1141)    : 'binary2my_decimal'  : cannot convert parameter 2 from 'char *' to 'const unsigned char *'
sql\item_sum.cpp(1143)    : 'binary2my_decimal'  : cannot convert parameter 2 from 'char *' to 'const unsigned char *'
sql\item_sum.cpp(1150)    : 'my_decimal2binary'  : cannot convert parameter 3 from 'char *' to 'unsigned char *'
sql\item_sum.cpp(1152)    : 'my_decimal2binary'  : cannot convert parameter 3 from 'char *' to 'unsigned char *'
sql\item_sum.cpp(1667)    : 'my_decimal2binary'  : cannot convert parameter 3 from 'char *' to 'unsigned char *'
sql\item_sum.cpp(1675)    : 'my_decimal2binary'  : cannot convert parameter 3 from 'char *' to 'unsigned char *'
sql\item_sum.cpp(1781)    : 'binary2my_decimal'  : cannot convert parameter 2 from 'char *' to 'const unsigned char *'
sql\item_sum.cpp(1786)    : 'my_decimal2binary'  : cannot convert parameter 3 from 'char *' to 'unsigned char *'
sql\item_sum.cpp(1983)    : 'binary2my_decimal'  : cannot convert parameter 2 from 'char *' to 'const unsigned char *'
sql\item_sum.cpp(2091)    : 'binary2my_decimal'  : cannot convert parameter 2 from 'char *' to 'const unsigned char *'
sql\item_sum.cpp(2093)    : 'binary2my_decimal'  : cannot convert parameter 2 from 'char *' to 'const unsigned char *'
sql\log_event.cpp(3107)   : 'binary2my_decimal'  : cannot convert parameter 2 from 'char *' to 'const unsigned char *'
sql\sql_analyse.cpp(1080) : 'binary2my_decimal'  : cannot convert parameter 2 from 'char *' to 'const unsigned char *'
sql\sql_analyse.cpp(477)  : 'my_decimal2binary'  : cannot convert parameter 3 from 'char [64]' to 'unsigned char *'

sql\item_func.h(351)      : 'Item_func_div::int_op' : must return a value

sql\item.cpp(1248)        : 'string2my_decimal' : undeclared identifier
sql\item_sum.cpp(1257)    : 'string2my_decimal' : undeclared identifier
sql\procedure.cpp(49)     : 'string2my_decimal' : undeclared identifier

How to repeat:
compiling with VC++
[16 Feb 2005 6:58] Alexey Botchkov
bk commit - 5.0 tree (hf:1.1855) BUG#8534