Fix for bug #8534 (Compile errors in Precision Math code on Windows)