sql/my_decimal.cc
@@ -116,7 +116,7 @@ int my_decimal2string(uint mask, const my_decimal *d,
     E_DEC_OVERFLOW
 */
 
-int my_decimal2binary(uint mask, const my_decimal *d, byte *bin, int prec,
+int my_decimal2binary(uint mask, const my_decimal *d, char *bin, int prec,
 		      int scale)
 {
   int err1= E_DEC_OK, err2;
